# Rotate-Yolov5

./: .gitignore  Convert_labels.ipynb  README.md  convert_HABBOF.ipynb  convert_habbof.py  requirements.txt  rotate_detect.py
cpp/: CMakeLists.txt  README.md  engine.cpp  engine.h  export.cpp  infer_angle.cpp
cpp/csrc/cuda/: decode_iou.cu  decode_iou.h  nms_iou.cu  nms_iou.h  utils.h
cpp/csrc/plugins/: DecodeRotatePlugin.h  NMSRotatePlugin.h
data/: rotate_cepdof.yaml
deepstream/: CMakeLists.txt  README.md  detect.cpp  nvdsparsebbox_yolo.cpp
deepstream/configs/: infer_aarch64.txt  infer_x86.txt  tracker_config.txt
deepstream/includes/: nvdsinfer.h
deepstream/sort_tracking/include/: matrix.h  track.h  tracker.h  utils.h
deepstream/sort_tracking/src/: track.cpp  tracker.cpp
models/: export.py  rotate_yolov5s_cepdof.yaml  yolo.py
